# Kin-Txt

./: .gitignore  .gitmodules  LICENCE  Makefile  docker-compose.yaml  readme.md
kin-api-gateway/: Makefile  docker-compose.yaml
kin-builtin-models-reports-builder/: Makefile  docker-compose.yaml
kin-builtin-models-reports-builder/src/: pyproject.toml
kin-builtin-models-reports-builder/src/kin_builtin_models/: __init__.py  __main__.py  settings.py
kin-builtin-models-reports-builder/src/kin_builtin_models/predictor/: english_sentiment_predictor.py  factory.py
kin-builtin-models-reports-builder/src/kin_builtin_models/predictor/predictors/: sst_2.py  ua_ner.py
kin-builtin-models-reports-builder/src/kin_builtin_models/predictor/predictors/english_sentiment/: __init__.py
kin-builtin-models-reports-builder/src/kin_builtin_models/predictor/predictors/news_classification/: __init__.py  predictor.py  preprocessor.py
kin-builtin-models-reports-builder/src/kin_builtin_models/predictor/predictors/ukranian_ner/: __init__.py
kin-frontend/: Makefile  docker-compose.yaml
kin-generic-reports-builder/: Makefile  docker-compose.yaml  requirements.txt
kin-generic-reports-builder/src/: pyproject.toml
kin-generic-reports-builder/src/kin_generic_builder/: __main__.py  constants.py  settings.py  types.py
kin-generic-reports-builder/src/kin_generic_builder/api/: application.py  server.py
kin-generic-reports-builder/src/kin_generic_builder/api/domain/: __init__.py  blobs_service.py
kin-generic-reports-builder/src/kin_generic_builder/api/views/: __init__.py  blobs.py  upload.py
kin-generic-reports-builder/src/kin_generic_builder/api/views/helpers/: __init__.py  auth.py
kin-generic-reports-builder/src/kin_generic_builder/data/stop-words/: uk.json
kin-generic-reports-builder/src/kin_generic_builder/events/: __init__.py  events.py
kin-generic-reports-builder/src/kin_generic_builder/mixins/: __init__.py  spacy_model_loader.py  unpack_keras_archive.py
kin-generic-reports-builder/src/kin_generic_builder/predictor/: factory.py
kin-generic-reports-builder/src/kin_generic_builder/predictor/predictor_types/: keras_predictor.py  sklearn_predictor.py
kin-generic-reports-builder/src/kin_generic_builder/predictor/preprocessing/: lemmatizer.py  service.py  stop_words_loader.py  stop_words_loader_mixin.py
kin-generic-reports-builder/src/kin_generic_builder/predictor/vectorizer/: vectorizer_factory.py
kin-generic-reports-builder/src/kin_generic_builder/predictor/vectorizer/types/: keras_vectorizer.py
kin-generic-reports-builder/src/kin_generic_builder/validation/: factory.py
kin-generic-reports-builder/src/kin_generic_builder/validation/keras_validation/: service.py
kin-generic-reports-builder/src/kin_generic_builder/validation/sklearn_validation/: service.py
kin-model-types/: Makefile  docker-compose.test.yaml  docker-compose.yaml  requirements.txt
kin-model-types/src/: pyproject.toml
kin-model-types/src/kin_model_types/: __init__.py  app.py  containers.py  run_server.py  settings.py
kin-model-types/src/kin_model_types/domain/entities/: model.py  visualization_template.py
kin-model-types/src/kin_model_types/domain/services/: model.py
kin-model-types/src/kin_model_types/events/: events.py  handlers.py
kin-model-types/src/kin_model_types/exceptions/: base.py
kin-model-types/src/kin_model_types/infrastructure/models/: __init__.py  tables.py
kin-model-types/src/kin_model_types/infrastructure/repositories/: __init__.py  model.py  visualization_template.py
kin-model-types/src/kin_model_types/infrastructure/services/: __init__.py  statistics.py
kin-model-types/src/kin_model_types/views/: __init__.py  model.py  visualization_template.py
kin-model-types/src/kin_model_types/views/helpers/: auth.py
kin-model-types/src/tests/: conftest.py
kin-model-types/src/tests/unit/: conftest.py
kin-model-types/src/tests/unit/domain/: test_model_service.py
kin-models/: channels.txt
kin-news/: Makefile  docker-compose.test.yaml  docker-compose.yaml  requirements.txt
kin-news-classification-reports-builder/: docker-compose.yaml  readme.md  requirements.txt
kin-news-classification-reports-builder/src/: pyproject.toml
kin-news-classification-reports-builder/src/kin_news_classification/: __main__.py
kin-news-classification-reports-builder/src/kin_news_classification/predictor/: factory.py  predictor.py
kin-reports-generation/: Makefile  docker-compose.yaml  readme.md  requirements.txt
kin-statistics/src/: pyproject.toml
kin-statistics/src/kin_statistics_api/: __init__.py  app.py  constants.py  containers.py  exception_handlers.py  exceptions.py  run_server.py  settings.py
kin-statistics/src/kin_statistics_api/data/reports/: 10.json  13.json  14.json  15.json  16.json  19.json  3.json  5.json  6.json  7.json  73.json  74.json
kin-statistics/src/kin_statistics_api/domain/: events.py  use_cases.py
kin-statistics/src/kin_statistics_api/domain/entities/: __init__.py  generate_report.py  generation_template.py  report.py  report_filters.py  user.py
kin-statistics/src/kin_statistics_api/domain/services/: interfaces.py  report.py  report_data.py  template.py  user.py
kin-statistics/src/kin_statistics_api/infrastructure/: interfaces.py
kin-statistics/src/kin_statistics_api/infrastructure/dtos/: __init__.py  reports_query_result.py
kin-statistics/src/kin_statistics_api/infrastructure/models/: __init__.py  tables.py  user.py  user_generates_report.py  user_report.py
kin-statistics/src/kin_statistics_api/infrastructure/repositories/: __init__.py  access_management.py  iam.py  reports.py  templates.py
kin-statistics/src/kin_statistics_api/views/: __init__.py  accounts.py  report_data.py  reports.py  templates.py
kin-statistics/src/kin_statistics_api/views/helpers/: auth.py
kin-statistics/src/tests/: conftest.py
kin-statistics/src/tests/unit/: conftest.py
kin-statistics/src/tests/unit/services/: test_report_data_service.py  test_report_service.py
kin-statistics/src/tests/unit/views/: conftest.py  test_accounts_views.py  test_reports_views.py
(+815 files in other folders)
