[tool.poetry]
name = "kin builtin models reports builder"
version = "0.1.0"
description = ""
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}
transformers = {extras = ["torch"], version = "^4.36.2"}
spacy = "^3.7.1"

en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl"}
uk_core_news_lg = {url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_lg-3.7.0/uk_core_news_lg-3.7.0-py3-none-any.whl"}
huggingface-hub = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
