[tool.poetry]
name = "kin builtin models reports builder"
version = "0.1.0"
description = ""
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

transformers = { version = "^4.36.2" }
tensorflow = "2.10.0"
spacy = "^3.7.1"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}

uk_core_news_md = {url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_md-3.7.0/uk_core_news_md-3.7.0-py3-none-any.whl"}
ru_core_news_md = {url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.7.0/ru_core_news_md-3.7.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
