[tool.poetry]
name = "kin-generic-builder"
version = "0.1.0"
description = "Service for storing generic models. Gathering and classifying the data for reports."
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}

dependency-injector = "^4.41.0"
joblib = "^1.3.2"
tensorflow = "^2.12.0"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
pandas = "^2.1.3"
numpy = "^1.26.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymorphy2 = "^0.9.1"
langid = "^1.1.6"
python-multipart = "^0.0.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
