[tool.poetry]
name = "kin-model-types"
version = "0.1.0"
description = "Service for storing and managing user models and templates."
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}

uvicorn = "0.23.2"
fastapi = "0.109.1"
python-multipart = "0.0.6"
click = "8.1.7"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
types-requests = "^2.31.0.20240125"
pytest = "^8.0.0"
coverage = "^7.4.1"
httpx = "^0.26.0"
pytest-mock = "~3.10.0"
factory-boy = "3.2.1"
pytest-factoryboy = "2.5.1"
pytest-faker = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports_for_stubs = false
strict_optional = false
