[tool.poetry]
name = "kin-statistics-api"
version = "0.1.0"
description = "Service for storing and managing reports."
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}

alembic = "1.9.2"
fastapi = "0.109.2"
pymongo = "4.3.2"
python-multipart = "0.0.5"
uvicorn = "0.20.0"
click = "8.1.3"
psycopg2-binary = "^2.9.9"
alembic-autogen-check = "1.1.1"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
# ignore import-untyped
ignore_missing_imports = true

