[tool.poetry]
name = "kin-statistics-api"
version = "0.1.0"
description = "Service for storing and managing reports."
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

kin-txt-core = { path = "../submodules/kin-txt-core/src", develop = true}

alembic = "1.9.2"
fastapi = "0.109.2"
python-multipart = "0.0.5"
uvicorn = "0.20.0"
click = "8.1.3"
psycopg2-binary = "^2.9.9"
alembic-autogen-check = "1.1.1"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest = "^8.0.0"
coverage = "^7.4.1"
httpx = "^0.26.0"
pytest-mock = "~3.10.0"
factory-boy = "3.2.1"
pytest-factoryboy = "2.5.1"
pytest-faker = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "env/*",
    "*/submodules/*",
]

[tool.flake8]
max-line-length = 200
per-file-ignores = [
    "*/__init__.py: F401"
]
exclude = [
    ".git",
    "__pycache__",
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
plugins = ["pydantic.mypy"]

ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = false
cache_dir = "/tmp/test_cache/.mypy_cache"
strict_optional = false
exclude = "type_hints.py"
